# pobsd-browser

./: Cargo.toml  README.md
man/: pobsd-browser.1
src/: app.rs  cmd.rs  event.rs  handler.rs  main.rs  ui.rs  utils.rs  widgets.rs
